# python-boilerplate

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  example.ipynb  main.py  mypy.ini  pyproject.toml  ruff.toml  setup.sh
notebooks/: basic_usage.ipynb
scripts/: dev.sh  setup.sh
src/: basic_usage.ipynb  main.py
src/app/: __init__.py
src/config/: settings.yaml
src/schemas/: common.py  env.py
src/utils/: __init__.py  config.py  env.py  logging.py  paths.py
tests/: __init__.py
