[project]
name = "python-project"
version = "0.1.0"
description = "Example project for Python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "email-validator>=2.3.0",
    "pydantic>=2.11.9",
    "pyyaml>=6.0.2",
    "types-pyyaml>=6.0.12.20250915",
]

# Scripts
[project.scripts]
start = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Identifies which directories contain your Python code that should be packaged
[tool.hatch.build.targets.wheel]
packages = ["src"]

# Maps the src/ directory to the root of the package
[tool.hatch.build.targets.wheel.sources]
"src" = ""

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "mypy>=1.16.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.13",
    "watchfiles>=1.0.5",
]
